--- a/frontend/movies-app/package.json
+++ b/frontend/movies-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.9",
     "bootstrap": "^5.1.3",
     "line-awesome": "^1.3.0",
+    "moment": "^2.29.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
