--- a/frontend/movies-app/package.json
+++ b/frontend/movies-app/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "line-awesome": "^1.3.0",
     "moment": "^2.29.4",
+    "ngx-lightbox": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
