--- a/frontend/movies-app/package.json
+++ b/frontend/movies-app/package.json
@@ -17,13 +17,14 @@
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
     "@angular/material": "^11.0.4",
+    "@angular/material-moment-adapter": "^11.0.4",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "bootstrap": "^5.1.3",
     "line-awesome": "^1.3.0",
     "moment": "^2.29.4",
-    "ngx-lightbox": "^2.4.1",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
