external db setup

--- a/backend/movies-app/src/main/resources/application.properties
+++ b/backend/movies-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/movies-db
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://dpg-clpnk6c1jt2c73bddeng-a.frankfurt-postgres.render.com/moviesdb_22wv
+spring.datasource.username=movies
+spring.datasource.password=9fHR7220s4BMfv2GFNSEj8tD4SWt5R7f
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
